03-lukema/kubernetes/hello-nginx/hello-nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-nginx
spec:
  selector:
    app: nginx
  # type: NodePort
  type: LoadBalancer
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 80
  externalIPs:      # without `externalIPs`, service will be only accessible by http://localhost:8080 only
                    # with `externalIPs`, service will be accessible from outside by "http://192.168.1.201:8080" or "http://ubuntu-k8s-master:8080"
    - 192.168.1.240
