03-lukema/kubernetes/hello-nginx/hello-nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-nginx-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/default-backend: hello-nginx
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: hello-nginx
      port:
        number: 8080
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-nginx
                port:
                  number: 8080
